--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "sass": "sass --watch style.scss ./assets/css/style.css"
+    "sass": "sass --watch style.scss style.css"
   },
   "author": "",
   "license": "ISC"
